# live-translation-for-obs

./: .env  README.md  app.js  db.sqlite3  device.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  translate.html
deepl_app/: apps.py  urls.py  views.py
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte
public/: index.html
routes/: index.js
templates/: index.html
twitchlivetranslation/: ContinuousRecognizer.py  asgi.py  consumers.py  settings.py  urls.py  views.py  wsgi.py
