[tool.poetry]
name = "twitch-live-translation"
version = "0.1.0"
description = ""
authors = ["lil-sussy <naykeysnet@gmail.com>"]
readme = "README.md"
packages = [{include = "twitch_live_translation"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
speechrecognition = "^3.10.1"
pydub = "^0.25.1"
pyaudio = "^0.2.14"
pvcheetah = "^2.0.1"
websocket = "^0.2.1"
websockets = "^12.0"
channels = "^4.0.0"
wavio = "^0.0.8"
scipy = "^1.12.0"
sounddevice = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
